# space-square

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yml
src/: File.hpp  Files.hpp  Printer.cpp  Printer.hpp  Scanner.cpp  Scanner.hpp  Squares.hpp  Squarify.cpp  Squarify.hpp  main.cpp
